<resources>
    <string name="setting_language_simplified_chinese">Chinese (Simplified)</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_german">German</string>
    <string name="setting_language_french">French</string>
    <string name="setting_language_japanese">Japanese</string>
    <string name="setting_center_language_simplified_chinese_native_spell">简体中文</string>
    <string name="setting_center_language_english_native_spell">English</string>
    <string name="setting_center_language_german_native_spell">Deutsch</string>
    <string name="setting_center_language_french_native_spell">Français</string>
    <string name="setting_center_language_japanese_native_spell">日本語</string>
    <string name="setting_remote_connection">Remote Connection</string>
    <string name="setting_remote_allow_remote_connection_title">Allow Remote Connection</string>
    <string name="setting_remote_allow_remote_connection_content">Allow Snapmaker Luban to connect to and control this machine.</string>
    <string name="setting_remote_safe_mode_title">Safe Mode</string>
    <string name="setting_remote_safe_mode_content">When connected to Snapmaker Luban, the touchscreen will be deactivated.</string>
    <string name="setting_remote_connection_verification">Remote Connection</string>
    <string name="settings_terms_experience_improvement_page_title">User Experience Improvement Program</string>
    <string name="settings_terms_experience_improvement_page_content">Content</string>
    <string name="settings_about_certification_page_title">Compliance Certification</string>
    <string name="settings_about_certification_page_content">Content</string>
    <string name="a400_reset">Reset</string>
    <string name="setting_maintenance_machine_information">Machine Information</string>
    <string name="setting_restore_to_factory_settings">Restore to Factory Settings </string>
    <string name="a400_reset_msg">All your data and updates will be erased!</string>
    <string name="a400_replace_module_intro_main_desc">The screen will guide you to replace the module. After the replacement, the mainboard will restart automatically.</string>
    <string name="a400_replace_module_switch_mode">Switching Functions</string>
    <string name="a400_replace_module_title">Replace Module</string>
    <string name="a400_replace_module_switch_mode_desc">When toggled on, you can only replace the 3D Printing Module, Laser Module, CNC Module, or Rotary Module.</string>
    <string name="a400_replace_module_instruction_tip_2">Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_instruction_tip_1">Detach the existing module and attach the new module.</string>
    <string name="a400_replace_module_instruction_warning_1">All modules except the Enclosure have been powered off</string>
    <string name="a400_replace_module_instruction_warning_2">Do NOT disconnect the Enclosure during replacement</string>
    <string name="a400_replace_module_mode_off_tip_1">1. Detach the existing module and attach the new module, and then change to the corresponding work platform. \n2. Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_mode_off_tip_2">1. Detach the existing module that you want to remove, or attach the new module that you want to add. \n2. Make sure that all cables are connected correctly, and then tap <b>Next</b>.</string>
    <string name="a400_replace_module_all_modules_power_off">All modules have been powered off</string>
    <string name="a400_replace_module_mode_off_tip_1_title"><![CDATA[Toolhead & Rotary Module]]></string>
    <string name="a400_replace_module_mode_off_tip_2_title">Addon</string>
    <string name="a400_replace_module_tap_help_tips">"For more detailed instruction, tap {icon} .</string>
    <string name="a400_replace_module_restarting_desc">The mainboard is restarting...</string>
    <string name="a400_replace_module_success_tips">Initialized successfully. Please confirm the replaced module and addon.</string>
    <string name="a400_replace_module_confirm_removed_title"><![CDATA[Removed Module & Addon]]></string>
    <string name="a400_replace_module_confirm_added_title"><![CDATA[Added Module & Addon]]></string>
    <string name="a400_replace_module_complete_module_need_calibrate_desc">The following module needs to be calibrated. Tap <b>Calibrate Module</b> to continue.</string>
    <string name="a400_replace_hotend_complete_desc">The following nozzle needs to be calibrated. Tap <b>Z Offset Calibration</b> to continue.</string>
    <string name="j1_setting_about_machine_name">Machine Name</string>
    <string name="j1_setting_about_machine_model">Machine Model</string>
    <string name="j1_setting_about_ip_address">IP Address</string>
    <string name="j1_setting_about_mac_address">MAC Address</string>
    <string name="j1_setting_about_storage">Storage</string>
    <string name="j1_setting_sys_logs">System Logs</string>
    <string name="j1_setting_about_build_volume">Build Volume</string>
    <string name="j1_setting_about_compliance_certification">Compliance Certification</string>
    <string name="j1_setting_about_compliance_certification_content"><b>FCC Compliance</b>
\n\nThis device complies with part 15 of the FCC Rules. Operation is subject to the following two conditions: (1) This device may not cause harmful interference, and (2) this device must accept any interference received, including interference that may cause undesired operation.
\n\n<b>Note</b>: This equipment has been tested and found to comply with the limits for a Class B digital device, pursuant to part 15 of the FCC Rules. These limits are designed to provide reasonable protection against harmful interference in a residential installation.
This equipment generates, uses and can radiate radio frequency energy and, if not installed and used in accordance with the instructions, may cause harmful interference to radio communications. However, there is no guarantee that interference will not occur in a particular installation.
\n\nIf this equipment does cause harmful interference to radio or television reception, which can be determined by turning the equipment off and on, the user is encouraged to try to correct the interference by one or more of the following measures:
\n- Reorient or relocate the receiving antenna.
\n- Increase the separation between the equipment and receiver.
\n- Connect the equipment into an outlet on a circuit different from that to which the receiver is connected.
\n- Consult the dealer or an experienced radio/TV technician for help.
\n\n<b>Caution</b>: Changes or Modifications not expressly approved by the party responsible for compliance could void the user’s authority to operate the equipment.
\n\n<b>FCC Radiation Exposure Statement</b>: This equipment complies with FCC radiation exposure limits set forth for an uncontrolled environment. This equipment should be installed and operated with a minimum distance of 20 cm between the radiator and your body.

\n\n<b>ISEDC Compliance</b>
\n\nThis device contains license-exempt transmitter(s)/receiver(s) that comply with Innovation, Science and Economic Development Canada’s license-exempt RSS(s). Operation is subject to the following two conditions:
\n(1) This device may not cause interference.
\n(2) This device must accept any interference, including interference that may cause undesired operation of the device.
\n\nThis device complies with RF exposure guidelines, users can obtain Canadian information on RF exposure and compliance. The minimum distance from the body to use the device is 20cm.
\n\nL’émetteur/récepteur exempt de licence contenu dans le présent appareil est conforme aux CNR d’Innovation, Sciences et Développement économique Canada applicables aux appareils radio exempts de licence. L’exploitation est autorisée aux deux conditions suivantes :
\n(1) L’appareil ne doit pas produire de brouillage
\n(2) L’appareil doit accepter tout brouillage radioélectrique subi, même si le brouillage est susceptible d’en compromettre le fonctionnement.
\n\nLe présent appareil est conforme. Après examen de ce matériel aux conformité ou aux limites d’intensité de champ RF, les utilisateurs peuvent sur l’exposition aux radiofréquences et la conformité and compliance d’acquérir les informations correspondantes. La distance minimale du corps à utiliser le dispositif est de 20cm.
    </string>
    <string name="j1_setting_about_clear_cache">Delete Touchscreen Data</string>
    <string name="j1_settting_about_clean_cache">Do you want to delete the Touchscreen data (while the mainboard data remains)? You have to re-do Wizard after deletion. </string>
    <string name="j1_setting_general_basic">Basic</string>
    <string name="j1_setting_general_wizard">Wizard</string>
    <string name="j1_setting_general_advanced">Advanced</string>
    <string name="j1_setting_general_extruder_left">Filament Runout Detection—Extruder L</string>
    <string name="j1_setting_general_extruder_right">Filament Runout Detection—Extruder R</string>
    <string name="j1_setting_general_light">Lighting</string>
    <string name="j1_setting_general_home_stall_detection">Homing Stall Detection</string>
    <string name="j1_setting_general_factory_reset">Factory Reset</string>
    <string name="j1_setting_general_factory_factory_reset_content">Are you sure to delete all the data, local files, and restore factory defaults?</string>
    <string name="j1_setting_general_delete_data">Are you sure to delete all the local files and the Wizard data?</string>
    <string name="j1_setting_about_usb_flash_drive">USB Flash Drive</string>
    <string name="j1_setting_machine_settings">Machine Settings</string>
    <string name="j1_settings_user_experience_program">User Experience Improvement Program</string>
    <string name="all_vibration_compensation">Vibration Compensation</string>
    <string name="all_compensation_frequency">Compensation Frequency</string>
    <string name="j1_settings_vibration_compensation_desc">Vibration Compensation can reduce the vibrations and shaking of the machine and therefore improve the printing quality.</string>
    <string name="j1_settings_glass_thickness">Glass thickness</string>
    <string name="j1_settings_hot_end_pid_auto_tune_title">Hot End PID Auto Tune</string>
    <string name="j1_settings_hot_end_pid_auto_tune_left">Left Hot End Auto Tune</string>
    <string name="j1_settings_hot_end_pid_auto_tune_right">Right Hot End Auto Tune</string>
    <string name="j1_settings_hot_end_pid_tune">Tune</string>
</resources>