<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j1_setting_general_basic"
            android:textColor="?attr/theme_color_explain_text"
            android:textSize="?attr/theme_font_size_explain" />

        <LinearLayout
            android:id="@+id/ll_wizard"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_wizard" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_j1_arrow_right" />
        </LinearLayout>

        <View
            style="@style/AppTheme.SectionDivider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/j1_setting_general_advanced"
            android:textColor="?attr/theme_color_explain_text"
            android:textSize="?attr/theme_font_size_explain" />

        <LinearLayout
            android:id="@+id/ll_filament_runout_l"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_extruder_left" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_filament_l"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_filament_runout_r"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_extruder_right" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_filament_r"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_home_stall_detection"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_home_stall_detection" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_home_stall_detection"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lighting"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_setting_general_light" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_lighting"
                style="@style/AppTheme.SwitchButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_platform_height_fine_tune"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_settings_glass_thickness" />

            <TextView
                android:id="@+id/tv_platform_height_fine_tune_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="#737480"
                android:textSize="16sp"
                android:text="N/A"
                tools:text="5.00 mm" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_j1_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hot_end_pid_auto_tune"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/j1_settings_hot_end_pid_auto_tune_title" />

            <TextView
                android:id="@+id/tv_hot_end_pid_auto_tune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="#737480"
                android:textSize="16sp"
                android:text="N/A"
                tools:text="5.00 mm" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_j1_arrow_right" />
        </LinearLayout>

        <!--    Vibration Compensation options will hide and not available for user from now.    -->
        <LinearLayout
            android:id="@+id/ll_vibration_compensation"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_vibration_compensation" />

            <TextView
                android:id="@+id/tv_vibration_compensation_enabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#737480"
                android:textSize="16sp"
                tools:text="Enabled" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_j1_arrow_right" />
        </LinearLayout>

        <View
            style="@style/AppTheme.SectionDivider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tv_factory_reset"
            style="@style/AppTheme.DangerZoneText"
            android:layout_width="match_parent"
            android:layout_height="?attr/theme_list_item_height"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/j1_setting_general_factory_reset" />
    </LinearLayout>
</ScrollView>
