<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1c28"
    android:orientation="vertical">

    <include layout="@layout/j1_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_bg_section_detail_normal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_compensation_switch"
                android:layout_width="match_parent"
                android:layout_height="?attr/theme_list_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextBody2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_vibration_compensation" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_compensation"
                    style="@style/AppTheme.SwitchButton"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_compensation_value"
                android:layout_width="match_parent"
                android:layout_height="?attr/theme_list_item_height"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextBody2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/all_compensation_frequency" />

                <TextView
                    android:id="@+id/tv_freq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#C4C5CC"
                    android:textSize="16sp"
                    tools:text="120Hz" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <View
                style="@style/AppTheme.SectionDivider"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:text="@string/j1_settings_vibration_compensation_desc"
                android:textColor="#737480"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>