<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1a1c28"
    android:orientation="vertical">

    <include layout="@layout/j1_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_bg_section_detail_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/tv_hot_end_pid_auto_tune_title"
            style="@style/AppTheme.TextBody1"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/margin_layout_16"
            android:layout_marginTop="@dimen/margin_layout_16"
            android:gravity="center_vertical"
            android:text="@string/j1_settings_hot_end_pid_auto_tune_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_hot_end_pid_auto_tune_left"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/margin_layout_16"
            android:layout_marginTop="@dimen/margin_layout_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hot_end_pid_auto_tune_title">

            <TextView
                android:id="@+id/tv_hot_end_pid_auto_tune_left"
                style="@style/AppTheme.TextBody1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_layout_20"
                android:paddingEnd="@dimen/margin_layout_20"
                android:text="@string/j1_settings_hot_end_pid_auto_tune_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_hot_end_pid_auto_tune_left_tune"
                style="@style/AppTheme.TextBody1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_layout_10"
                android:gravity="center_vertical"
                android:text="@string/j1_settings_hot_end_pid_tune"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_left_hot_end_tune"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_left_hot_end_tune"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin_layout_16"
                android:scaleType="centerInside"
                android:src="@drawable/icon_auto_tune_normal_64x64"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_hot_end_pid_auto_tune_right"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/margin_layout_16"
            android:layout_marginTop="@dimen/margin_layout_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_hot_end_pid_auto_tune_left">

            <TextView
                android:id="@+id/tv_hot_end_pid_auto_tune_right"
                style="@style/AppTheme.TextBody1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/margin_layout_20"
                android:paddingEnd="@dimen/margin_layout_20"
                android:text="@string/j1_settings_hot_end_pid_auto_tune_right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_hot_end_pid_auto_tune_right_tune"
                style="@style/AppTheme.TextBody1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_layout_10"
                android:gravity="center_vertical"
                android:text="@string/j1_settings_hot_end_pid_tune"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_right_hot_end_tune"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_right_hot_end_tune"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin_layout_16"
                android:scaleType="centerInside"
                android:src="@drawable/icon_auto_tune_normal_64x64"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
